--- a/executable-jar/pom.xml
+++ b/executable-jar/pom.xml
@@ -5,13 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.milac.java.training</groupId>
-    <artifactId>java-training-exec-jar</artifactId>
+    <artifactId>executable-jar</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -38,7 +38,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>de.milac.javatraining.execjar.Startup</mainClass>
+                                    <mainClass>de.milac.java.training.execjar.Startup</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
